--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   font-family: sans-serif;
   text-align: center;
-  background: #85082d; /* sky blue background */
+  background: #fffcf5; /* sky blue background */
   overflow-x: hidden;
 }
 
