--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
 body {
   font-family: sans-serif;
   text-align: center;
-  background: #85082d;
+  background: #fffcf5;
   overflow: hidden;
 }
 
